--- a/public/index.jade
+++ b/public/index.jade
@@ -1,9 +1,10 @@
 html
     head
-        title 3DRepo basic test
+        title 3drepo.io 
         link(rel='stylesheet' type='text/css' href='#{x3domcss}')
         script(type="text/javascript"
                 src='#{x3domjs}')
+        link(rel='stylesheet' type='text/css' href='#{repouicss}')
     body(style='width:100%; height:100%; border: 0px; padding:0px; margin:0px;')
             !{xml}
             table(style='position:absolute; top=0; left=0;')
