--- a/public/index.jade
+++ b/public/index.jade
@@ -5,7 +5,7 @@ html
         script(type="text/javascript"
                 src='#{x3domjs}')
         link(rel='stylesheet' type='text/css' href='#{repouicss}')
-    body(style='width:100%; height:100%; border: 0px; padding:0px; margin:0px;')
+    body
             !{xml}
             table(style='position:absolute; top=0; left=0;')
                 tr
