--- a/public/index.jade
+++ b/public/index.jade
@@ -1,50 +1,90 @@
 extends layout
 
 block content
-    script.
-        document.onload = function(e) {
-            jQuery("#view-everything").click(function(e) {
-                    document.getElementById("model").runtime.showAll();
-                    });
-            
-            jQuery("#view-def-viewpoint").click(function(e) {
-                    document.getElementById("model").runtime.resetView();
-                    });
+	script.
+		document.onload = function(e) {
+			jQuery("#view-everything").click(function(e) {
+				document.getElementById("model").runtime.showAll();
+			});
 
-            jQuery("#show-about").click(function(e) {
-                    BootstrapDialog.show({
-                        title: '3D Repo Viewer',
-                        message: 'About 3D Repo Here\n<a \
-                        href="http://3drepo.org">Homepage</a>'
-                       });
-                    });
-        };
-    nav.navbar.transparent.navbar-inverse.navbar-fixed-top(role='navigation')
-        div.container-fluid
-            div.navbar-header
-                button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target=".navbar-collapse")
-                    span.glyphicon.glyphicon-th
-                    span.icon-bar
-                    span.icon-bar
-                a.navbar-brand(href='#' id='show-about')
-                    img.img_responsive(style='margin:-7px' src='../3drepo_logo_white.png') 
-            div.collapse.navbar-collapse
-                ul.nav.navbar-nav
-                    li.dropdown
-                        a.dropdown-toggle(data-toggle="dropdown" href='#') View
-                            span.caret
-                        ul.dropdown-menu(role='menu')
-                            li
-                                a(href='#' id="view-everything") Everything
-                            li
-                                a(href='#' id="view-def-viewpoint") Default Viewpoint
-                    li.dropdown
-                        a.dropdown-toggle(data-toggle="dropdown"
-                                href="#") Mesh
-                            span.caret
-                        ul.dropdown-menu.scrollable-menu(role='menu')
-                            each mesh in repo
-                                li
-                                    a(href='/3drepoio/' + mesh)= mesh
-    !{xml}
+			jQuery("#view-def-viewpoint").click(function(e) {
+				document.getElementById("model").runtime.resetView();
+			});
+
+			jQuery("#show-about").click(function(e) {
+				BootstrapDialog.show({
+					title: '3D Repo Viewer',
+					message: 'About 3D Repo Here\n<a \
+					href="http://3drepo.org">Homepage</a>'
+				});
+			});
+
+			x3dom.nodeTypes.PopGeometry.PrecisionFactorOnMove = 1.0;
+			x3dom.nodeTypes.PopGeometry.ErrorToleranceFactor = 1.0;
+
+			GlobalSettings = function()
+			{
+				this.minPrecBits = 16;
+				this.maxPrecBits = 0;
+				this.getPrecBitsString = function()
+				{
+					return (this.minPrecBits + " - " + this.maxPrecBits);
+				}
+				this.precisionBitsString = this.getPrecBitsString();
+			}
+
+			globalSetting = new GlobalSettings();
+
+			var onExitFrame = function()
+			{
+				//update the current value of the progressbar, computed during rendering
+				var popGeos = document.getElementsByTagName("popGeometry");
+				globalSetting.minPrecBits = 16;
+				globalSetting.maxPrecBits = 0;
+
+				var numRenderedSubs = popGeos.length;
+				for (var i = 0; i < popGeos.length; ++i)
+				{
+					var lod = popGeos[i]._x3domNode._mesh.currentLOD;
+					globalSetting.minPrecBits = lod < globalSetting.minPrecBits ? lod : globalSetting.minPrecBits;
+					globalSetting.maxPrecBits = lod > globalSetting.maxPrecBits ? lod : globalSetting.maxPrecBits;
+				}
+
+				console.log('MIN: ' + globalSetting.minPrecBits);
+				console.log('MAX: ' + globalSetting.maxPrecBits);
+
+				this.canvas.doc.needRender = true;
+			}
+
+			document.getElementById('model').runtime.exitFrame = onExitFrame;
+
+		};
+	nav.navbar.transparent.navbar-inverse.navbar-fixed-top(role='navigation')
+		div.container-fluid
+			div.navbar-header
+				button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target=".navbar-collapse")
+					span.glyphicon.glyphicon-th
+					span.icon-bar
+					span.icon-bar
+				a.navbar-brand(href='#' id='show-about')
+					img.img_responsive(style='margin:-7px' src='../3drepo_logo_white.png') 
+			div.collapse.navbar-collapse
+				ul.nav.navbar-nav
+					li.dropdown
+						a.dropdown-toggle(data-toggle="dropdown" href='#') View
+							span.caret
+						ul.dropdown-menu(role='menu')
+							li
+								a(href='#' id="view-everything") Everything
+							li
+								a(href='#' id="view-def-viewpoint") Default Viewpoint
+					li.dropdown
+						a.dropdown-toggle(data-toggle="dropdown"
+								href="#") Mesh
+							span.caret
+						ul.dropdown-menu.scrollable-menu(role='menu')
+							each mesh in repo
+								li
+									a(href='/3drepoio/' + mesh)= mesh
+	!{xml}
 
