--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -15,11 +15,61 @@
  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+
+@font-face {
+    font-family: '3drepo-font';
+    src: url('../fonts/logo-webfont.eot');
+    src: url('../fonts/logo-webfont.eot?#iefix'),
+    	 url('../fonts/logo-webfont.woff') format('woff'),
+         url('../fonts/3drepo.io.ttf') format('truetype'),
+         url('../fonts/logo-webfont.svg#logo-webfont') format('svg');
+    font-style: normal;
+    font-weight: normal;
+}
+
 body {
     height : 100%;
     margin : 0;     
     padding : 0;
-    width : 100%;    
+    width : 100%;  
+background: rgb(87,156,228); /* Old browsers */
+background: -moz-linear-gradient(top,  rgb(87,156,228) 0%, rgb(130,206,242) 41%, rgb(207,236,254) 50%, rgb(210,235,252) 50%, rgb(229,232,233) 50%, rgb(231,231,231) 50%, rgb(206,206,206) 58%, rgb(195,195,195) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(87,156,228)), color-stop(41%,rgb(130,206,242)), color-stop(50%,rgb(207,236,254)), color-stop(50%,rgb(210,235,252)), color-stop(50%,rgb(229,232,233)), color-stop(50%,rgb(231,231,231)), color-stop(58%,rgb(206,206,206)), color-stop(100%,rgb(195,195,195))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#579ce4', endColorstr='#c3c3c3',GradientType=0 ); /* IE6-9 */
+  
+}
+
+
+h1#logo { 
+    font-family: '3drepo-font', sans-serif;
+    position: absolute;
+    bottom: 0;
+    right: 0.3em;
+    z-index: 10;
+    font-size: 400%;
+    color: white;
+    font-weight: 100;
+    text-shadow:
+        0 0 1px #666,
+        1px 1px 1px #666;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#x3dom-state-viewer {
+    color: white;
+    text-shadow:
+        0 0 1px #666,
+        1px 1px 1px #666;
+    background-color: transparent;
 }
 
 div#x3dom_logdiv.x3dom-logcontainer {
@@ -41,6 +91,13 @@ div#x3dom_logdiv.x3dom-logcontainer {
     overflow-x: hidden;
 }
 
-.navbar-brand {
+.navbar-inverse.navbar-brand {
     max-width: 63%;
 }
+
+
+nav.navbar.transparent.navbar-inverse.navbar-fixed-top {
+    background-color: transparent !important;
+    border-color: transparent !important; 
+}
+
