--- a/public/index.jade
+++ b/public/index.jade
@@ -59,15 +59,14 @@ block content
 			document.getElementById('model').runtime.exitFrame = onExitFrame;
 
 		};
+	h1#logo 3D Repo
 	nav.navbar.transparent.navbar-inverse.navbar-fixed-top(role='navigation')
 		div.container-fluid
 			div.navbar-header
 				button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target=".navbar-collapse")
 					span.glyphicon.glyphicon-th
 					span.icon-bar
-					span.icon-bar
-				a.navbar-brand(href='#' id='show-about')
-					img.img_responsive(style='margin:-7px' src='../3drepo_logo_white.png') 
+					span.icon-bar	
 			div.collapse.navbar-collapse
 				ul.nav.navbar-nav
 					li.dropdown
