--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -224,4 +224,7 @@ nav.navbar.transparent.navbar-inverse.navbar-fixed-top {
     min-width: 10px;
     margin-left: 5px;
     visibility: hidden;
+
+h1.error {
+	color: red;
 }
