--- a/public/index.jade
+++ b/public/index.jade
@@ -192,6 +192,8 @@ block content
 		br
 		strong#dist_name Distance:
 		strong#distance 0.00 m
-	!{xml}
+	x3d(xmlns="http://www.web3d.org/specification/x3d-namespace" id="model" showStat="true" showLog="false" style="width:100%; height:100%; border:0px;")
+		scene
+			!{xml}
 
 
