--- a/public/layout.jade
+++ b/public/layout.jade
@@ -6,6 +6,7 @@ html
 		script(type="text/javascript" src='#{x3domjs}')
 		script(type="text/javascript" src='https:////cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js')
 		script(type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-utils/0.1.1/angular-ui-utils.min.js')
+		script(type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js')
 		script(type="text/javascript" src='../js/3drepoapp.js')
 
 		link(rel='stylesheet', href='../bootstrap/dist/css/bootstrap.min.css')
