--- a/views/index.jade
+++ b/views/index.jade
@@ -36,7 +36,7 @@ block content
 		strong#dist_name Distance:
 		strong#distance 0.00 m
 	x3d(xmlns="http://www.web3d.org/specification/x3d-namespace" id="model" showStat="true" showLog="false" style="width:100%; height:100%; border:0px;")
-		scene
+		scene.
 			!{xml}
 
 
