--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,13 +7,13 @@ html
 		script(type="text/javascript" src='https:////cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js')
 		script(type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-utils/0.1.1/angular-ui-utils.min.js')
 		script(type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js')
+		script(type="text/javascript" src='../js/x3dcontroller.js')
 		script(type="text/javascript" src='../js/3drepoapp.js')
-
+		
 		link(rel='stylesheet', href='../bootstrap/dist/css/bootstrap.min.css')
 		script(type="text/javascript" src="../jquery/dist/jquery.min.js")
 		script(type="text/javascript" src="../bootstrap/dist/js/bootstrap.min.js")
 		script(type="text/javascript" src="../bootstrap3-dialog/dist/js/bootstrap-dialog.min.js")
 		link(rel='stylesheet' type='text/css' href='#{repouicss}')
-
 		body(ng-app='3drepoapp')
 			block content
