--- a/views/bid4free.jade
+++ b/views/bid4free.jade
@@ -30,7 +30,7 @@ block content
 
 		//- Recurse on chilren
 		ul(ng-show="data.expanded" class="nav nav-pills nav-stacked treerow")
-			li(ng-repeat="data in data.nodes | orderBy:name" class="{{selected === data.name ? 'active' : ''}}" ng-include="'tree_element.html'")
+			li(ng-repeat="data in data.nodes | orderBy:name" class="{{selected === data.id ? 'active' : ''}}" ng-include="'tree_element.html'")
 
 	script(type="text/ng-template" id="treeview.html")
 		div.treeview
@@ -38,14 +38,14 @@ block content
 				div.treeview-header
 					h3 Total Bid: £{{compute_total()}}
 				ul(class="nav nav-pills nav-stacked treerow")
-					li(ng-repeat="data in tree" class="{{selected === data.name ? 'active' : ''}}" ng-include="'tree_element.html'")
+					li(ng-repeat="data in tree" class="{{selected === data.id ? 'active' : ''}}" ng-include="'tree_element.html'")
 
 	//- Hack for the demo, render the list of objects
 	script.
 		var objs = !{objs};
 
 	h1#logo 3D Repo
-	nav.navbar.whitenavbar.navbar-fixed-top(role='navigation')
+	nav.navbar.whitenavbar.navbar-fixed-top(role='navigation', ng-controller='BaseNavigationCtrl')
 		div.container-fluid
 			div.navbar-header
 				button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target=".navbar-collapse")
@@ -66,16 +66,16 @@ block content
 							span.caret
 						ul.dropdown-menu(role='menu')
 							li
-								a#view-everything(href='#') Everything
+								a#view-everything(href='#' ng-click="view_all()") Everything
 							li
-								a#view-def-viewpoint(href='#') Default Viewpoint
+								a#view-def-viewpoint(href='#'  ng-click="default_viewpoint()") Default Viewpoint
 
 	div.fill
 		ui-view
 		div.viewport
 			x3d(xmlns="http://www.web3d.org/specification/x3d-namespace" id="model" showStat="true" showLog="false" style="width:100%; height:100%; border:0px;")
-				scene
+				scene(DEF="scene")
+					background(skyangle="0.9 1.5 1.57" skycolor="0.21 0.18 0.66 0.2 0.44 0.85 0.51 0.81 0.95 0.83 0.93 1" groundangle="0.9 1.5 1.57" groundcolor="0.65 0.65 0.65 0.73 0.73 0.73 0.81 0.81 0.81 0.91 0.91 0.91")
+					environment(frustumCulling="true" smallFeatureCulling="true" smallFeatureThreshold="5" occlusionCulling="true")
 					!{xml}
-
-
 
