ISSUE_7 - Partial completed measuring tool for issue #7

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
 		script(type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js')
 		script(type="text/javascript" src='../js/x3dcontroller.js')
 		script(type="text/javascript" src='../js/3drepoapp.js')
+		script(type="text/javascript" src='../js/measurer.js')
 		
 		link(rel='stylesheet', href='../bootstrap/dist/css/bootstrap.min.css')
 		script(type="text/javascript" src="../bootstrap/dist/js/bootstrap.min.js")
